--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cloud_firestore: ^0.13.7
   file_picker: ^1.12.0
   path: ^1.7.0
+  firebase_database: ^3.1.6
+  flutter_sparkline: ^0.1.0
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +55,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
