--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>YOUR DESCRIPTION HERE</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>YOUR DESCRIPTION HERE</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
@@ -41,5 +46,17 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+
+	<string>Main</string>
+    <key>UIRequiredDeviceCapabilities</key>
+    <array>
+         <string>location-services</string>
+         <string>gps</string>
+         <string>armv7</string>
+    </array>
+    <key>UIBackgroundModes</key>
+    <array>
+         <string>location</string>
+    </array>
 </dict>
 </plist>
