--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -38,7 +38,7 @@ android {
 
     defaultConfig {
         multiDexEnabled true
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
+        // TODO: Specify your own unique com.sekhmet.dementiacare.Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.sekhmet.dementiacare"
         minSdkVersion 21
         targetSdkVersion 28
