--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,14 +30,19 @@ dependencies:
   cupertino_icons: ^0.1.3
   google_fonts: ^1.1.0
 
-  google_maps_flutter: ^0.5.28
+  google_maps_flutter: 0.5.27+2
   music_player: ^0.1.5
   firebase_storage: ^3.1.6
   cloud_firestore: ^0.13.7
+  firebase_core: ^0.4.0
   file_picker: ^1.12.0
   path: ^1.7.0
+  rxdart: ^0.23.1
   firebase_database: ^3.1.6
-  flutter_sparkline: ^0.1.0
+  geoflutterfire: ^2.0.2
+  location: ^3.0.2
+  permission_handler: ^5.0.0
+  shared_preferences: ^0.5.12
 
 dev_dependencies:
   flutter_test:
